@@ -20,6 +20,7 @@ import javax.annotation.Nullable;
 import javax.inject.Inject;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import static com.google.common.base.Preconditions.checkNotNull;
 import static com.google.common.collect.FluentIterable.from;
@@ -28,8 +29,9 @@ import static com.google.common.collect.FluentIterable.from;
  * @author Herman Zamula
  */
 @Transactional(readOnly = true)
-public abstract class DefaultExperimentCreationHelper<INSTRUMENT extends InstrumentTemplate, FILE extends FileMetaDataTemplate>
-        implements ExperimentCreationHelperTemplate {
+public abstract class DefaultExperimentCreationHelper<INSTRUMENT extends InstrumentTemplate,
+    FILE extends FileMetaDataTemplate>
+    implements ExperimentCreationHelperTemplate {
 
     @Inject
     private InstrumentRepositoryTemplate<INSTRUMENT> instrumentRepository;
@@ -56,53 +58,72 @@ public abstract class DefaultExperimentCreationHelper<INSTRUMENT extends Instrum
 
     @Override
     public List<DictionaryItem> availableInstrumentModels(long actor, Long lab) {
-        return transformAndSortDictionaryItems(instrumentRepository.availableInstrumentModels(actor, lab == null ? 0 : lab));
+        return transformAndSortDictionaryItems(
+            instrumentRepository.availableInstrumentModels(actor, lab == null ? 0 : lab));
     }
 
     @Override
-    public List<DictionaryItem> availableInstrumentModels(long actor, @Nullable Long lab, long technologyType, long vendor) {
-        return transformAndSortDictionaryItems(instrumentRepository.availableInstrumentModels(actor, lab == null ? 0 : lab, technologyType, vendor));
+    public List<DictionaryItem> availableInstrumentModels(long actor,
+                                                          @Nullable Long lab,
+                                                          long technologyType,
+                                                          long vendor) {
+        return transformAndSortDictionaryItems(
+            instrumentRepository.availableInstrumentModels(actor, lab == null ? 0 : lab, technologyType, vendor)
+        );
     }
 
     @Override
-    public List<DictionaryItem> availableInstrumentModels(long actor, @Nullable Long lab, long technologyType, long vendor, long instrumentType) {
-        return transformAndSortDictionaryItems(instrumentRepository.availableInstrumentModels(actor, lab == null ? 0 : lab, technologyType, vendor, instrumentType));
+    public List<DictionaryItem> availableInstrumentModels(long actor, @Nullable Long lab, long technologyType,
+                                                          long vendor, long instrumentType) {
+        return transformAndSortDictionaryItems(
+            instrumentRepository.availableInstrumentModels(
+                actor, lab == null ? 0 : lab, technologyType, vendor, instrumentType
+            )
+        );
     }
 
     @Override
-    public List<DictionaryItem> availableInstrumentTypes(long actor, @Nullable Long lab, long technologyType, long vendor) {
-        return transformAndSortDictionaryItems(instrumentRepository.availableInstrumentTypes(lab == null ? 0 : lab, technologyType, vendor));
+    public List<DictionaryItem> availableInstrumentTypes(long actor,
+                                                         @Nullable Long lab,
+                                                         long technologyType,
+                                                         long vendor) {
+        return transformAndSortDictionaryItems(
+            instrumentRepository.availableInstrumentTypes(lab == null ? 0 : lab, technologyType, vendor)
+        );
     }
 
 
     private List<DictionaryItem> transformAndSortDictionaryItems(List<DictionaryRepoItem> models) {
-        return from(models)
-                .transform(transformers.dictionaryItemTransformer())
-                .toSortedList(transformers.dictionaryItemComparator());
+        return models.stream()
+            .map(transformers.dictionaryItemTransformer()::apply)
+            .sorted(transformers.dictionaryItemComparator())
+            .collect(Collectors.toList());
     }
 
     @Override
     public List<InstrumentItem> availableInstrumentsByModel(long actor, long model) {
 
-        return from(instrumentRepository.availableInstrumentsByModel(actor, model))
-                .transform(transformers.instrumentItemTransformer())
-                .toList();
+        return instrumentRepository.availableInstrumentsByModel(actor, model).stream()
+            .map(transformers.instrumentItemTransformer()::apply)
+            .collect(Collectors.toList());
     }
 
     @Override
     public List<FileItem> availableFilesByInstrumentModel(long actor, long specie, long model, Long lab) {
 
-        return from(fileMetaDataRepository.availableFilesByInstrumentModel(actor, model, specie, lab == null ? 0 : lab))
-                .transform(transformers.fileTransformer())
-                .toList();
+        return fileMetaDataRepository.availableFilesByInstrumentModel(actor, model, specie, lab == null ? 0 : lab)
+            .stream()
+            .map(transformers.fileTransformer()::apply)
+            .collect(Collectors.toList());
     }
 
     @Override
     public List<FileItem> availableFilesByInstrument(long actor, long specie, long instrument) {
 
-        return from(fileMetaDataRepository.availableFilesByInstrumentAndSpecie(actor, specie, instrument))
-                .transform(transformers.fileTransformer())
-                .toList();
+        return fileMetaDataRepository.availableFilesByInstrumentAndSpecie(actor, specie, instrument)
+            .stream()
+            .map(transformers.fileTransformer()::apply)
+            .collect(Collectors.toList());
     }
 
     @Override
@@ -110,13 +131,8 @@ public abstract class DefaultExperimentCreationHelper<INSTRUMENT extends Instrum
 
         //noinspection unchecked
         return from(experimentRepositoryTemplate.findOwned(user))
-                .transform(new Function<ExperimentTemplate, NamedItem>() {
-                    @Override
-                    public NamedItem apply(ExperimentTemplate input) {
-                        return new NamedItem(input.getId(), input.getName());
-                    }
-                })
-                .toSet();
+            .transform((Function<ExperimentTemplate, NamedItem>) input -> new NamedItem(input.getId(), input.getName()))
+            .toSet();
 
     }
 
@@ -124,13 +140,8 @@ public abstract class DefaultExperimentCreationHelper<INSTRUMENT extends Instrum
     public ImmutableSortedSet<NamedItem> availableProjects(long actor) {
 
         return from(projectRepository.findAllowedForWriting(actor))
-                .transform(new Function<ProjectTemplate, NamedItem>() {
-                    @Override
-                    public NamedItem apply(ProjectTemplate input) {
-                        return new NamedItem(input.getId(), input.getName());
-                    }
-                })
-                .toSortedSet(transformers.namedItemComparator());
+            .transform((Function<ProjectTemplate, NamedItem>) input -> new NamedItem(input.getId(), input.getName()))
+            .toSortedSet(transformers.namedItemComparator());
 
     }
 
@@ -140,13 +151,8 @@ public abstract class DefaultExperimentCreationHelper<INSTRUMENT extends Instrum
         final UserTemplate<?> user = checkNotNull(userRepository.findOne(actor), "User not found. Id=" + actor);
 
         return from(user.getLabs())
-                .transform(new Function<LabTemplate<?>, NamedItem>() {
-                    @Override
-                    public NamedItem apply(LabTemplate<?> input) {
-                        return new NamedItem(input.getId(), input.getName());
-                    }
-                })
-                .toSortedSet(transformers.namedItemComparator());
+            .transform((Function<LabTemplate<?>, NamedItem>) input -> new NamedItem(input.getId(), input.getName()))
+            .toSortedSet(transformers.namedItemComparator());
 
     }
 
@@ -154,13 +160,9 @@ public abstract class DefaultExperimentCreationHelper<INSTRUMENT extends Instrum
     public ImmutableSortedSet<ExperimentTypeItem> experimentTypes() {
 
         return from(experimentTypeRepository.findAll())
-                .transform(new Function<ExperimentType, ExperimentTypeItem>() {
-                    @Override
-                    public ExperimentTypeItem apply(ExperimentType type) {
-                        return new ExperimentTypeItem(type.getId(), type.getName(), type.allowed2dLC, type.labelsAllowed);
-                    }
-                })
-                .toSortedSet(transformers.dictionaryItemComparator());
+            .transform(
+                type -> new ExperimentTypeItem(type.getId(), type.getName(), type.allowed2dLC, type.labelsAllowed)
+            ).toSortedSet(transformers.dictionaryItemComparator());
 
     }
 
@@ -169,8 +171,8 @@ public abstract class DefaultExperimentCreationHelper<INSTRUMENT extends Instrum
     public ImmutableSet<DictionaryItem> species() {
 
         return from(speciesRepository.findAll())
-                .transform(transformers.dictionaryItemTransformer())
-                .toSet();
+            .transform(transformers.dictionaryItemTransformer())
+            .toSet();
     }
 
     @Override
